# Harambee-DAO

./: .gitignore  README.md
app/: globals.css  page.tsx
app/ai-auditor-demo/: page.tsx
app/community/: page.tsx
app/features/: page.tsx
app/resources/: page.tsx
backend/: .env.example  .gitignore  README.md  api_demo.py  pyproject.toml  pytest.ini  setup.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py
backend/app/services/: audit_service.py  vote_service.py
backend/app/utils/: ai.py  celestia.py  ipfs.py  oracle.py
backend/tests/: test_api.py  test_health.py  test_logging.py  test_utils_ai.py  test_utils_misc.py
components/: benefits-section.tsx  hero-section.tsx  how-it-works-section.tsx  navigation.tsx
components/community/: community-guidelines.tsx  community-hero.tsx  community-overview.tsx  member-benefits.tsx
components/contact/: contact-hero.tsx  contact-info.tsx  interactive-faq.tsx
components/features/: feature-overview.tsx  security-measures.tsx
components/governance/: dao-structure.tsx  governance-stats.tsx  proposal-management.tsx  voting-process.tsx
components/resources/: api-documentation.tsx  interactive-guides.tsx  resource-search.tsx  resources-hero.tsx
components/technology/: blockchain-section.tsx  tech-stack-section.tsx
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: HarambeeSafeTrigger.sol
contracts/scripts/: deploy.ts
docs/: HarambeeDAOPRD.md
frontend/: README.md
(+24 files in other folders)
