[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harambee-backend"
version = "0.1.0"
description = "Harambee DAO Backend (FastAPI)"
authors = [{ name = "HarambeeDAO Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report term-missing --cov-report html --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.ruff]
line-length = 100
exclude = ["build", "dist", ".venv", "node_modules"]
